--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.application.name=graphql-demo
 spring.graphql.graphiql.enabled=true
 spring.graphql.graphiql.path=/graphiql
+spring.banner.location=classpath:banner.txt
